--- a/.gitignore
+++ b/.gitignore
@@ -177,7 +177,12 @@ ipython_config.py
 # Project-level settings
 /.tgitconfig
 
-# Visual Studio
+# Visual Studio 2015/2017 cache/options directory
+# Roslyn cache directories
+*.ide/
+.vs/
+
+# Visual Studio Code
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
